--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
   ],
   "author": "leo",
   "license": "ISC",
-  "dependencies": {
-    "string": "^3.3.3"
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "^4.1.2"
   }
